# Monad

./: AGENTS.md  Cargo.toml  README.md  rustfmt.toml
crates/monad-app/: Cargo.toml  Dioxus.toml
crates/monad-app/assets/: styles.css
crates/monad-app/assets/icons/: icon.icns
crates/monad-app/src/: main.rs
crates/monad-app/src/components/: mod.rs
crates/monad-app/src/components/ipod/: click_wheel.rs  device.rs  mod.rs  screen.rs  status_bar.rs
crates/monad-app/src/components/ipod/views/: list.rs  menu.rs  mod.rs  now_playing.rs  search.rs  settings.rs
crates/monad-app/src/services/: audio.rs  mod.rs
crates/monad-app/src/state/: battery.rs  ipod.rs  mod.rs  player.rs
crates/monad-audio/: Cargo.toml
crates/monad-audio/src/: decode.rs  engine.rs  ffmpeg_decode.rs  lib.rs  output.rs  resample.rs
crates/monad-audio/src/buffer/: mod.rs  ring.rs
crates/monad-cache/: Cargo.toml
crates/monad-cache/src/: lib.rs
crates/monad-core/: Cargo.toml
crates/monad-core/src/: error.rs  lib.rs  types.rs
crates/monad-core/src/types/: album.rs  artist.rs  common.rs  playlist.rs  queue.rs  stream.rs  track.rs
crates/monad-extractor/: Cargo.toml
crates/monad-extractor/src/: lib.rs
crates/monad-innertube/: Cargo.toml
crates/monad-innertube/src/: client.rs  context.rs  lib.rs  parser.rs  types.rs
crates/monad-innertube/src/endpoints/: browse.rs  mod.rs  player.rs  search.rs
crates/monad-lyrics/: Cargo.toml
crates/monad-lyrics/src/: lib.rs  parser.rs
