[workspace]
resolver = "2"
members = [
    "crates/monad-core",
    "crates/monad-innertube",
    "crates/monad-audio",
    "crates/monad-extractor",
    "crates/monad-cache",
    "crates/monad-lyrics",
    "crates/monad-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["shydev"]
license = "MIT"
repository = "https://github.com/shydev/monad"
rust-version = "1.80"

[workspace.dependencies]
# Internal crates
monad-core = { path = "crates/monad-core" }
monad-innertube = { path = "crates/monad-innertube" }
monad-audio = { path = "crates/monad-audio" }
monad-extractor = { path = "crates/monad-extractor" }
monad-cache = { path = "crates/monad-cache" }
monad-lyrics = { path = "crates/monad-lyrics" }

# GUI Framework (100% Rust)
dioxus = { version = "0.6", features = ["desktop"] }

# Async Runtime
tokio = { version = "1.43", features = ["full"] }

# Audio
symphonia = { version = "0.5", features = ["all"] }  # All codecs + all format demuxers
cpal = "0.15"
rubato = "0.16"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "cookies", "rustls-tls"], default-features = false }
ureq = "3.0"

# YouTube Extraction
yt-dlp = "1.4"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# XML parsing
quick-xml = { version = "0.37", features = ["serialize"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Lock-free Data Structures
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Image processing (for app icon)
image = { version = "0.25", default-features = false, features = ["png"] }

# Utilities
bytes = "1.9"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
once_cell = "1.20"
dashmap = "6.1"
lru = "0.12"
directories = "5.0"
battery = "0.7"
sha2 = "0.10"
hex = "0.4"

# Testing
proptest = "1.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Workspace-wide lints
[workspace.lints.rust]
unsafe_code = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Lint groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Specific lints to deny
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"

# Allow these pedantic lints (too noisy or impractical)
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
significant_drop_tightening = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
similar_names = "allow"
option_if_let_else = "allow"
redundant_else = "allow"
match_same_arms = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
fn_params_excessive_bools = "allow"
struct_excessive_bools = "allow"
ref_option = "allow"
return_self_not_must_use = "allow"
future_not_send = "allow"
assigning_clones = "allow"
or_fun_call = "allow"
unnecessary_sort_by = "allow"
needless_pass_by_value = "allow"
