[package]
name = "monad-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Offline caching (SQLite + filesystem) for Monad"

[lints]
workspace = true

[dependencies]
monad-core.workspace = true

tokio.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
directories.workspace = true
sha2.workspace = true
hex.workspace = true
lru.workspace = true
parking_lot.workspace = true
chrono.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.14"
