[package]
name = "monad-innertube"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "YouTube Music InnerTube API client for Monad"

[lints]
workspace = true

[dependencies]
monad-core.workspace = true

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
chrono.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest.workspace = true
